# HCNet_SDK_ROS

./: CMakeLists.txt  package.xml
config/: camera2.yaml
include/: HCNet.h
launch/: camera.launch  camera_all.launch
src/: HCNet.cpp
