<?xml version="1.0"?>
<package>
  <name>hcnet_sdk</name>
  <version>1.0.0</version>
  <description>hcnet_sdk</description>

  <maintainer email="njust@520.com">WJH SSJ</maintainer>

  <license>TODO</license>

  <author>SSJ</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
